--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -106,10 +106,10 @@
     font-size: 16px;
 }
 
-.login-form button, .primary-btn {
+.login-form button, .primary-btn a {
+    display: inline-block;
     width: 100%;
     max-width: 600px;
-    margin-top: 20px;
     padding: 1rem 2rem;
     border: 0;
     border-radius: 1rem;
@@ -117,6 +117,15 @@
     color: var(--white);
     font-size: 1rem;
     font-weight: 600;
+}
+
+.login-form button {
+    margin-top: 20px;
+}
+
+.primary-btn {
+    border: 0;
+    border-radius: 1rem;
 }
 
 .details-div {
