--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -67,7 +67,7 @@
         border-bottom-right-radius: 50px;
     }
     .finish-ride-container {
-        height: calc(100vh - 273.61px);
+        height: calc(100vh - 273.61px) !important;
     }
 }
 
