--- a/src/components/popups/PopUpContainer.css
+++ b/src/components/popups/PopUpContainer.css
@@ -169,6 +169,25 @@
 
 .pop-up-container.ride .flex.bike-info .battery {
     width: 24px;
+    height: 24px;
+    position: relative;
+    right: auto!important;
+    left: auto!important;
+}
+.pop-up-container.ride .flex.bike-info .battery-bar{
+    position: absolute;
+    top: 40%;
+    left: 0.2rem;
+    height: 0.5rem;
+    background: red;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+}
+.pop-up-container.ride .flex.bike-info .batery-container{
+    position: relative;
 }
 
 .pop-up-container.ride .flex.ride-options {
