--- a/src/pages/Map.css
+++ b/src/pages/Map.css
@@ -76,6 +76,9 @@
 .primary-btn{
     z-index: 20!important;
 }
+.rescan-btn{
+    bottom: 5rem!important;
+}
 
 #reader #reader__dashboard_section_csr span button {
     position: absolute;
