--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -103,9 +103,9 @@ section.hero .boxes-wrapper {
 }
 
 section.hero .box.video-bg {
-    background: -o-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("homepage-video-thumbnail.png");
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.2))), url("homepage-video-thumbnail.png");
-    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("homepage-video-thumbnail.png");
+    background: -o-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/homepage-video-thumbnail.png");
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.2))), url("../assets/homepage-video-thumbnail.png");
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/homepage-video-thumbnail.png");
     background-position: center;
     color: var(--white);
 }
